chore: Nav bugfixes (#789)
* NOJIRA: Amend selector for clickableElement to avoid null pointer.

* NOJIRA: Header Bugfixes - refactor to accommodate nested link list under
Explore SAP section, separators in between nested list items, different
list dropdown column configurations, remove arrows on upper level of
primary nav (as per current SAP site implementation). Additionally fix
visible supposedly unexpanded nav menu to right of screen boundary on mobile.

* NOJIRA: Fix Explore SAP positioning.

* NOJIRA: Fix secondary nav dropdown appearance.

* NOJIRA: Secondary nav should appear behind primary nav dropdowns.

* chore: Fix styling for SAP Explore as first level link only.

--- a/aemedge/blocks/header/secondary-nav.css
+++ b/aemedge/blocks/header/secondary-nav.css
@@ -2,12 +2,24 @@
 
 header {
   & #nav-secondary {
+    --nav-dropdown-desktop-inline-spacing: var(--udexSpacer16);
+    --nav-dropdown-desktop-block-spacing: var(--udexSpacer16);
+    --nav-list-item-padding: var(--udexSpacer16) 0;
+
     align-items: center;
     background: var(--sapNeutralBackground);
     display: flex;
     height: var(--nav-secondary-height);
+    position: relative;
     text-wrap: nowrap;
-    z-index: 101;
+    z-index: 99;
+
+    &.nav-secondary--fixed {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
 
     & .nav-secondary-actions {
       border-top: 1px solid var(--nav-line-separator-color);
@@ -104,12 +116,6 @@ header {
       display: none;
     }
 
-    & .nav-secondary-tabs {
-      & li :is(a, .text) {
-        padding-inline: 0;
-      }
-    }
-
     &[aria-expanded='true'] {
       & .nav-secondary__dropdown-trigger::after {
         transform: rotate(-90deg);
@@ -175,14 +181,12 @@ header {
         gap: 0;
         max-width: 360px;
         min-width: 240px;
-        padding: var(--udexSpacer16);
 
         & li {
           margin: 0;
         }
 
         & li :is(a, .text) {
-          padding: var(--udexSpacer16) 0;
           width: unset;
         }
       }
